--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_add_sample_data"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/actionDeleteSampleData"
+        android:orderInCategory="100"
+        android:title="@string/action_delete_sample_data"
+        app:showAsAction="never"/>
 </menu>
